openshift/frontend.d.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"medis-data-template-backend"}]'
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"medis-data-template-frontend:${IMAGE_TAG}","namespace":"${TOOLS_NAMESPACE}"},"fieldPath":"spec.template.spec.containers[?(@.name==\"medis-data-template-frontend\")].image","pause":"false"}]'
  name: medis-data-template-frontend
  labels:
    app: medis-data-template-frontend
    app.kubernetes.io/component: medis-data-template-frontend
    app.kubernetes.io/instance: medis-data-template-frontend
    app.kubernetes.io/name: medis-data-template-frontend
    app.kubernetes.io/part-of: medis-data-template-frontend-app
    app.openshift.io/runtime: nodejs
    app.openshift.io/runtime-version: latest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: medis-data-template-frontend
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: medis-data-template-frontend
        deployment: medis-data-template-frontend
    spec:
      containers:
        - name: medis-data-template-frontend
          image: 'image-registry.openshift-image-registry.svc:5000/ee981c-tools/medis-data-template-frontend:${IMAGE_TAG}'
          ports:
            - containerPort: 5173
              protocol: TCP
          resources:
            limits:
              cpu: 200m
              memory: 400Mi
            requests:
              cpu: 150m
              memory: 250Mi
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
