openshift/allow-frontend-to-backend.np.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-frontend-to-backend
spec:
  podSelector:
    matchLabels:
      app: medis-data-template-backend
  ingress:
    - ports:
        - protocol: TCP
          port: 8080
      from:
        - podSelector:
            matchLabels:
              app: medis-data-template-frontend
  policyTypes:
    - Ingress
